--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "mongodb": "^6.16.0",
     "react": "^19.0.0",
+    "react-19-credit-cards": "^1.0.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3"
