--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.16.0",
     "react": "^19.0.0",
     "react-19-credit-cards": "^1.0.3",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3"
