--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "mongodb": "^6.16.0",
     "react": "^19.0.0",
-    "react-19-credit-cards": "^1.0.3",
-    "react-credit-cards": "^0.8.3",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
